# SelfProtectingSystem

./: .gitignore  README.md  actuator.startup  attacker.startup  generate_blockchain_config.py  generate_cometbft_config.py  ids_snort.startup  ids_suricata.startup  ids_zeek.startup  juice_shop.startup  lab.conf  makefile  member0.startup  member1.startup  member2.startup  member3.startup  node1.startup  node3.startup  pyvenv.cfg  requirements.txt  router.startup  validator0.startup  validator1.startup  validator2.startup
.github/: copilot-instructions.md
.github/agents/: a.agent.md
benchmark/: attacker_burst.py  benchmark_capacity.py  benchmark_throughput.py  blockchain_benchmark.py  blockchain_burst.py  blockchain_measure.py  generate_chart.py  generate_charts.py  generate_graphs.py  measure_response_time.py
ids_snort/: dockerfile
ids_suricata/: dockerfile
ids_zeek/: dockerfile
juice_shop/: dockerfile
lab/cometbft/: attacker.startup  fullnode0.startup  ids_snort.startup  ids_suricata.startup  ids_zeek.startup  juice_shop.startup  lab.conf  light0.startup  light1.startup  light2.startup  (+4 more)
lab/cometbft/shared/sps-bench/: Cargo.toml  sps-bench.rs
lab/cometbft/shared/sps-chain/: Cargo.toml  RustComet.tar.xz
lab/cometbft/shared/sps-chain/.cargo/: config.toml
lab/cometbft/shared/sps-chain/src/: api.rs  config.rs  forwarder.rs  ledger.rs  main.rs  p2p.rs  types.rs
shared/: Dockerfile  actuator_server.py  alert_sender.sh  contract_abi.json  contract_address.txt
tests/: run_all_tests.sh  test_attack_flow.sh  test_blockchain_consensus.sh  test_loop.sh
(+90 files in other folders)
