[package]
name    = "sps-bench"
version = "0.1.0"
edition = "2021"

# Single binary — injects raw VoteTx frames directly into sps-node P2P port,
# completely bypassing the HTTP API for true ledger throughput measurement.
[[bin]]
name = "sps-bench"
path = "sps-bench.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio-tungstenite = "0.23"
futures-util = "0.3"
base64 = "0.22"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
