[package]
name = "sps-chain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sps-node"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
bytes = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
